--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -115,10 +115,8 @@ jobs:
         uses: lukka/run-vcpkg@v10
         id: runvcpkg
         with:
-          vcpkgDirectory: '$env:VCPKG_INSTALLATION_ROOT'
+          vcpkgDirectory: ${env:VCPKG_INSTALLATION_ROOT}
           vcpkgGitCommitId: '12c2a93b4007612b5ffa980c9d2235eb0bcac10f'
-          # Run vcpkg with the command specified by the `runVcpkgFormatString` input.
-          runVcpkgInstall: true
           vcpkgJsonGlob: '**/vcpkg.json'
           appendedCacheKey: vcpkginstall
 
@@ -178,8 +176,6 @@ jobs:
         with:
           vcpkgDirectory: '/usr/local/share/vcpkg'
           vcpkgGitCommitId: '12c2a93b4007612b5ffa980c9d2235eb0bcac10f'
-          # Run vcpkg with the command specified by the `runVcpkgFormatString` input.
-          runVcpkgInstall: true
           vcpkgJsonGlob: '**/vcpkg.json'
           appendedCacheKey: vcpkginstall
 
