--- a/examples/projects/Youbot/CMakeLists.txt
+++ b/examples/projects/Youbot/CMakeLists.txt
@@ -1,8 +1,8 @@
 
 add_executable(Youbot youbot.cpp)
-target_link_libraries(Youbot PRIVATE threepp)
+target_link_libraries(Youbot PRIVATE threepp assimp::assimp)
 
 if (imgui_FOUND)
     add_executable(Youbot_kine youbot_kine.cpp)
-    target_link_libraries(Youbot_kine PRIVATE threepp kine imgui::imgui)
+    target_link_libraries(Youbot_kine PRIVATE threepp kine imgui::imgui assimp::assimp)
 endif()
