--- a/examples/bullet/CMakeLists.txt
+++ b/examples/bullet/CMakeLists.txt
@@ -8,4 +8,5 @@ target_link_libraries(hello_bullet PRIVATE bullet_integration)
 if (imgui_FOUND)
     add_executable(pid_control pid_control.cpp)
     target_link_libraries(pid_control PRIVATE bullet_integration imgui::imgui)
+    target_include_directories(pid_control PRIVATE "${CMAKE_SOURCE_DIR}/examples/utility")
 endif ()
