--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -20,6 +20,9 @@ if (imgui_FOUND)
 
         set_property(TARGET imgui::imgui APPEND PROPERTY INTERFACE_LINK_LIBRARIES imgui_glfw)
     endif()
+
+    set_property(TARGET imgui::imgui APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS HAS_IMGUI)
+
 endif ()
 
 if (NOT TARGET "matplotlib::matplotlib")
@@ -29,7 +32,7 @@ if (NOT TARGET "matplotlib::matplotlib")
         find_path(MATPLOTLIB_CPP_INCLUDE_DIRS "matplotlibcpp.h")
         if (MATPLOTLIB_CPP_INCLUDE_DIRS)
             add_library(matplotlib::matplotlib INTERFACE IMPORTED)
-            target_compile_definitions(matplotlib::matplotlib INTERFACE WITHOUT_NUMPY)
+            target_compile_definitions(matplotlib::matplotlib INTERFACE WITHOUT_NUMPY HAS_MATPLOTLIB)
             target_link_libraries(matplotlib::matplotlib INTERFACE Python3::Python)
             target_include_directories(matplotlib::matplotlib INTERFACE "${MATPLOTLIB_CPP_INCLUDE_DIRS}")
             set(matplotlib_FOUND TRUE)
