--- a/examples/bullet/CMakeLists.txt
+++ b/examples/bullet/CMakeLists.txt
@@ -8,5 +8,8 @@ target_link_libraries(hello_bullet PRIVATE bullet_integration)
 if (imgui_FOUND)
     add_executable(pid_control pid_control.cpp)
     target_link_libraries(pid_control PRIVATE bullet_integration imgui::imgui)
+    if (matplotlib_FOUND)
+        target_link_libraries(pid_control PRIVATE matplotlib::matplotlib)
+    endif()
     target_include_directories(pid_control PRIVATE "${CMAKE_SOURCE_DIR}/examples/utility")
 endif ()
