--- a/examples/bullet/CMakeLists.txt
+++ b/examples/bullet/CMakeLists.txt
@@ -1,13 +1,10 @@
 
-add_library(bullet_integration BulletEngine.cpp)
-target_link_libraries(bullet_integration PUBLIC threepp Bullet::Bullet)
-
 add_executable(hello_bullet hello_bullet.cpp)
-target_link_libraries(hello_bullet PRIVATE bullet_integration)
+target_link_libraries(hello_bullet PRIVATE threepp Bullet::Bullet)
 
 if (imgui_FOUND)
     add_executable(pid_control pid_control.cpp)
-    target_link_libraries(pid_control PRIVATE bullet_integration imgui::imgui)
+    target_link_libraries(pid_control PRIVATE threepp Bullet::Bullet imgui::imgui)
     if (matplotlib_FOUND)
         target_link_libraries(pid_control PRIVATE matplotlib::matplotlib)
     endif()
