--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,7 +2,7 @@
 include(LibConfig.cmake)
 
 add_executable(demo demo.cpp)
-target_link_libraries(demo PUBLIC threepp gltext::gltext)
+target_link_libraries(demo PUBLIC threepp)
 if (imgui_FOUND)
     target_link_libraries(demo PUBLIC imgui::imgui)
     target_compile_definitions(demo PRIVATE "HAS_IMGUI")
