move text impl out of renderer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -234,6 +234,7 @@ set(sources
 
         "threepp/utils/uuid.cpp"
 
+        "threepp/renderers/TextHandle.cpp"
         "threepp/renderers/GLRenderer.cpp"
 
         "threepp/renderers/gl/GLAttributes.cpp"
