add layers test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,4 +14,5 @@ add_test_executable(Object3D_test)
 add_test_executable(PerspectiveCamera_test)
 add_test_executable(StringUtils_test)
 add_test_executable(EventDispatcher_test)
+add_test_executable(Layers_test)
 target_include_directories(StringUtils_test PRIVATE "${CMAKE_SOURCE_DIR}/src")
