--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,8 @@ set(publicHeaders
         "threepp/core/misc.hpp"
         "threepp/core/InstancedBufferAttribute.hpp"
         "threepp/core/InstancedBufferGeometry.hpp"
+        "threepp/core/InterleavedBuffer.hpp"
+        "threepp/core/InterleavedBufferAttribute.hpp"
         "threepp/core/Object3D.hpp"
         "threepp/core/Raycaster.hpp"
         "threepp/core/Shader.hpp"
@@ -74,6 +76,7 @@ set(publicHeaders
         "threepp/materials/RawShaderMaterial.hpp"
         "threepp/materials/ShaderMaterial.hpp"
         "threepp/materials/ShadowMaterial.hpp"
+        "threepp/materials/SpriteMaterial.hpp"
         "threepp/materials/interfaces.hpp"
 
         "threepp/math/Box2.hpp"
@@ -105,6 +108,7 @@ set(publicHeaders
         "threepp/objects/LineSegments.hpp"
         "threepp/objects/LOD.hpp"
         "threepp/objects/Mesh.hpp"
+        "threepp/objects/Sprite.hpp"
         "threepp/objects/Points.hpp"
         "threepp/objects/Reflector.hpp"
         "threepp/objects/Water.hpp"
@@ -226,6 +230,7 @@ set(sources
         "threepp/lights/SpotLightShadow.cpp"
 
         "threepp/objects/Mesh.cpp"
+        "threepp/objects/Sprite.cpp"
         "threepp/objects/Reflector.cpp"
         "threepp/objects/Water.cpp"
 
