--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,13 +6,8 @@ function(add_test_executable name)
 endfunction()
 
 add_test_executable(constants_test)
-add_test_executable(Uniform_test)
-add_test_executable(Vector3_test)
-add_test_executable(Matrix4_test)
-add_test_executable(Quaternion_test)
-add_test_executable(Object3D_test)
-add_test_executable(PerspectiveCamera_test)
-add_test_executable(StringUtils_test)
-add_test_executable(EventDispatcher_test)
-add_test_executable(Layers_test)
-target_include_directories(StringUtils_test PRIVATE "${CMAKE_SOURCE_DIR}/src")
+
+add_subdirectory(cameras)
+add_subdirectory(core)
+add_subdirectory(math)
+add_subdirectory(utils)
