move and rename example

--- a/examples/loaders/CMakeLists.txt
+++ b/examples/loaders/CMakeLists.txt
@@ -10,11 +10,8 @@ target_link_libraries(obj_mtl_loader PUBLIC threepp)
 
 if (assimp_FOUND)
     add_executable(assimp_loader_obj assimp_loader_obj.cpp)
-    target_link_libraries(assimp_loader_obj threepp assimp::assimp)
+    target_link_libraries(assimp_loader_obj PUBLIC threepp assimp::assimp)
 
     add_executable(assimp_loader_glb assimp_loader_glb.cpp)
-    target_link_libraries(assimp_loader_glb threepp assimp::assimp)
-
-    add_executable(assimp_loader_glb_lps assimp_loader_glb_lps.cpp)
-    target_link_libraries(assimp_loader_glb_lps threepp assimp::assimp)
+    target_link_libraries(assimp_loader_glb PUBLIC threepp assimp::assimp)
 endif()
