--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,7 @@ set(publicHeaders
         "threepp/geometries/CylinderGeometry.hpp"
         "threepp/geometries/DecalGeometry.hpp"
         "threepp/geometries/PlaneGeometry.hpp"
+        "threepp/geometries/RingGeometry.hpp"
         "threepp/geometries/SphereGeometry.hpp"
         "threepp/geometries/TubeGeometry.hpp"
 
@@ -195,6 +196,7 @@ set(sources
         "threepp/geometries/CylinderGeometry.cpp"
         "threepp/geometries/DecalGeometry.cpp"
         "threepp/geometries/PlaneGeometry.cpp"
+        "threepp/geometries/RingGeometry.cpp"
         "threepp/geometries/SphereGeometry.cpp"
 
         "threepp/helpers/ArrowHelper.cpp"
