--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,7 @@ set(publicHeaders
         "threepp/geometries/PlaneGeometry.hpp"
         "threepp/geometries/RingGeometry.hpp"
         "threepp/geometries/SphereGeometry.hpp"
+        "threepp/geometries/TorusGeometry.hpp"
         "threepp/geometries/TorusKnotGeometry.hpp"
         "threepp/geometries/TubeGeometry.hpp"
         "threepp/geometries/WireframeGeometry.hpp"
@@ -202,6 +203,7 @@ set(sources
         "threepp/geometries/PlaneGeometry.cpp"
         "threepp/geometries/RingGeometry.cpp"
         "threepp/geometries/SphereGeometry.cpp"
+        "threepp/geometries/TorusGeometry.cpp"
         "threepp/geometries/TorusKnotGeometry.cpp"
         "threepp/geometries/WireframeGeometry.cpp"
 
