dont dispose on shutdown

--- a/examples/objects/CMakeLists.txt
+++ b/examples/objects/CMakeLists.txt
@@ -17,4 +17,7 @@ target_link_libraries(sprite PUBLIC threepp)
 if (assimp_FOUND)
     add_executable(decal decal.cpp)
     target_link_libraries(decal PUBLIC threepp assimp::assimp)
+    if (imgui_FOUND)
+        target_link_libraries(decal PUBLIC imgui::imgui)
+    endif()
 endif()
