--- a/examples/projects/Youbot/CMakeLists.txt
+++ b/examples/projects/Youbot/CMakeLists.txt
@@ -5,6 +5,7 @@ target_link_libraries(Youbot PRIVATE threepp assimp::assimp)
 if (imgui_FOUND)
 
     add_executable(Youbot_kine youbot_kine.cpp)
-    target_link_libraries(Youbot_kine PRIVATE threepp kine imgui::imgui assimp::assimp)
+    target_link_libraries(Youbot_kine PRIVATE threepp imgui::imgui assimp::assimp)
+    target_include_directories(Youbot_kine PRIVATE "${CMAKE_SOURCE_DIR}/examples/libs")
 
 endif()
