--- a/examples/bullet/CMakeLists.txt
+++ b/examples/bullet/CMakeLists.txt
@@ -8,5 +8,5 @@ if (imgui_FOUND)
     if (matplotlib_FOUND)
         target_link_libraries(pid_control PRIVATE matplotlib::matplotlib)
     endif()
-    target_include_directories(pid_control PRIVATE "${CMAKE_SOURCE_DIR}/examples/utility")
+    target_include_directories(pid_control PRIVATE "${CMAKE_SOURCE_DIR}/examples/libs")
 endif ()
