--- a/examples/geometries/CMakeLists.txt
+++ b/examples/geometries/CMakeLists.txt
@@ -2,5 +2,8 @@
 add_executable(geometries geometries.cpp)
 target_link_libraries(geometries PUBLIC threepp)
 
+add_executable(lathe_geometry lathe_geometry.cpp)
+target_link_libraries(lathe_geometry PUBLIC threepp)
+
 add_executable(tube_geometry tube_geometry.cpp)
 target_link_libraries(tube_geometry PUBLIC threepp)
