--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,7 @@ set(publicHeaders
         "threepp/geometries/ConeGeometry.hpp"
         "threepp/geometries/CylinderGeometry.hpp"
         "threepp/geometries/DecalGeometry.hpp"
+        "threepp/geometries/LatheGeometry.hpp"
         "threepp/geometries/PlaneGeometry.hpp"
         "threepp/geometries/RingGeometry.hpp"
         "threepp/geometries/SphereGeometry.hpp"
@@ -203,6 +204,7 @@ set(sources
         "threepp/geometries/CircleGeometry.cpp"
         "threepp/geometries/CylinderGeometry.cpp"
         "threepp/geometries/DecalGeometry.cpp"
+        "threepp/geometries/LatheGeometry.cpp"
         "threepp/geometries/PlaneGeometry.cpp"
         "threepp/geometries/RingGeometry.cpp"
         "threepp/geometries/SphereGeometry.cpp"
