--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -1,4 +1,5 @@
 
+add_test_executable(Box3_test)
 add_test_executable(Vector3_test)
 add_test_executable(Matrix4_test)
 add_test_executable(Quaternion_test)
