--- a/tests/math/CMakeLists.txt
+++ b/tests/math/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 add_test_executable(Box3_test)
+add_test_executable(Sphere_test)
 add_test_executable(Vector3_test)
 add_test_executable(Matrix4_test)
 add_test_executable(Quaternion_test)
