--- a/examples/geometries/CMakeLists.txt
+++ b/examples/geometries/CMakeLists.txt
@@ -7,3 +7,11 @@ target_link_libraries(lathe_geometry PUBLIC threepp)
 
 add_executable(tube_geometry tube_geometry.cpp)
 target_link_libraries(tube_geometry PUBLIC threepp)
+
+if (imgui_FOUND)
+   add_executable(box_geometry box_geometry.cpp)
+   target_link_libraries(box_geometry PUBLIC threepp imgui::imgui)
+
+   add_executable(sphere_geometry sphere_geometry.cpp)
+   target_link_libraries(sphere_geometry PUBLIC threepp imgui::imgui)
+endif()
