update basic geometries and examples

--- a/examples/geometries/CMakeLists.txt
+++ b/examples/geometries/CMakeLists.txt
@@ -15,6 +15,9 @@ if (imgui_FOUND)
    add_executable(cylinder_geometry cylinder_geometry.cpp)
    target_link_libraries(cylinder_geometry PUBLIC threepp imgui::imgui)
 
+   add_executable(plane_geometry plane_geometry.cpp)
+   target_link_libraries(plane_geometry PUBLIC threepp imgui::imgui)
+
    add_executable(sphere_geometry sphere_geometry.cpp)
    target_link_libraries(sphere_geometry PUBLIC threepp imgui::imgui)
 endif()
