--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,8 +32,11 @@ set(publicHeaders
         "threepp/extras/bullet/BulletWrapper.hpp"
         "threepp/extras/core/Curve.hpp"
         "threepp/extras/core/CurvePath.hpp"
+        "threepp/extras/core/Interpolations.hpp"
         "threepp/extras/core/Path.hpp"
         "threepp/extras/curves/CatmullRomCurve3.hpp"
+        "threepp/extras/curves/CubicBezierCurve.hpp"
+        "threepp/extras/curves/CubicBezierCurve3.hpp"
         "threepp/extras/curves/EllipseCurve.hpp"
         "threepp/extras/curves/LineCurve.hpp"
         "threepp/extras/imgui/imgui_context.hpp"
