--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,6 +40,8 @@ set(publicHeaders
         "threepp/extras/curves/EllipseCurve.hpp"
         "threepp/extras/curves/LineCurve.hpp"
         "threepp/extras/curves/LineCurve3.hpp"
+        "threepp/extras/curves/QuadraticBezierCurve.hpp"
+        "threepp/extras/curves/QuadraticBezierCurve3.hpp"
         "threepp/extras/imgui/imgui_context.hpp"
 
         "threepp/input/KeyListener.hpp"
