--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,7 @@ set(publicHeaders
         "threepp/cameras/CameraView.hpp"
 
         "threepp/extras/bullet/BulletWrapper.hpp"
+        "threepp/extras/ShapeUtils.hpp"
         "threepp/extras/core/Curve.hpp"
         "threepp/extras/core/CurvePath.hpp"
         "threepp/extras/core/Interpolations.hpp"
