--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,6 +35,7 @@ set(publicHeaders
         "threepp/extras/core/Interpolations.hpp"
         "threepp/extras/core/Path.hpp"
         "threepp/extras/core/Shape.hpp"
+        "threepp/extras/core/ShapePath.hpp"
         "threepp/extras/curves/CatmullRomCurve3.hpp"
         "threepp/extras/curves/CubicBezierCurve.hpp"
         "threepp/extras/curves/CubicBezierCurve3.hpp"
@@ -214,6 +215,7 @@ set(sources
         "threepp/core/Raycaster.cpp"
 
         "threepp/extras/core/Path.cpp"
+        "threepp/extras/core/ShapePath.cpp"
         "threepp/extras/curves/CatmullRomCurve3.cpp"
         "threepp/extras/curves/SplineCurve.cpp"
 
