--- a/examples/geometries/CMakeLists.txt
+++ b/examples/geometries/CMakeLists.txt
@@ -8,6 +8,9 @@ target_link_libraries(lathe_geometry PUBLIC threepp)
 add_executable(tube_geometry tube_geometry.cpp)
 target_link_libraries(tube_geometry PUBLIC threepp)
 
+add_executable(shape_geometry shape_geometry.cpp)
+target_link_libraries(shape_geometry PUBLIC threepp)
+
 if (imgui_FOUND)
    add_executable(box_geometry box_geometry.cpp)
    target_link_libraries(box_geometry PUBLIC threepp imgui::imgui)
