--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,11 +30,13 @@ set(publicHeaders
         "threepp/cameras/CameraView.hpp"
 
         "threepp/extras/bullet/BulletWrapper.hpp"
+        "threepp/extras/ShapeUtils.hpp"
         "threepp/extras/core/Curve.hpp"
         "threepp/extras/core/CurvePath.hpp"
         "threepp/extras/core/Interpolations.hpp"
         "threepp/extras/core/Path.hpp"
         "threepp/extras/core/Shape.hpp"
+        "threepp/extras/core/ShapePath.hpp"
         "threepp/extras/curves/CatmullRomCurve3.hpp"
         "threepp/extras/curves/CubicBezierCurve.hpp"
         "threepp/extras/curves/CubicBezierCurve3.hpp"
@@ -59,6 +61,7 @@ set(publicHeaders
         "threepp/geometries/LatheGeometry.hpp"
         "threepp/geometries/PlaneGeometry.hpp"
         "threepp/geometries/RingGeometry.hpp"
+        "threepp/geometries/ShapeGeometry.hpp"
         "threepp/geometries/SphereGeometry.hpp"
         "threepp/geometries/TorusGeometry.hpp"
         "threepp/geometries/TorusKnotGeometry.hpp"
@@ -213,7 +216,9 @@ set(sources
         "threepp/core/Object3D.cpp"
         "threepp/core/Raycaster.cpp"
 
+        "threepp/extras/ShapeUtils.cpp"
         "threepp/extras/core/Path.cpp"
+        "threepp/extras/core/ShapePath.cpp"
         "threepp/extras/curves/CatmullRomCurve3.cpp"
         "threepp/extras/curves/SplineCurve.cpp"
 
@@ -225,6 +230,7 @@ set(sources
         "threepp/geometries/LatheGeometry.cpp"
         "threepp/geometries/PlaneGeometry.cpp"
         "threepp/geometries/RingGeometry.cpp"
+        "threepp/geometries/ShapeGeometry.cpp"
         "threepp/geometries/SphereGeometry.cpp"
         "threepp/geometries/TorusGeometry.cpp"
         "threepp/geometries/TorusKnotGeometry.cpp"
