--- a/examples/extras/CMakeLists.txt
+++ b/examples/extras/CMakeLists.txt
@@ -1,4 +1,7 @@
 
+add_executable(fonts core/fonts.cpp)
+target_link_libraries(fonts PUBLIC threepp)
+
 add_executable(catmull_room_curve3 curves/catmull_room_curve3.cpp)
 target_link_libraries(catmull_room_curve3 PUBLIC threepp)
 
