fix data path for tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+add_compile_definitions(DATA_FOLDER="${CMAKE_SOURCE_DIR}/data")
+
 function(add_test_executable name)
     add_executable(${name} ${name}.cpp)
     target_link_libraries(${name} PRIVATE threepp Catch2::Catch2)
