--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+add_compile_definitions(DATA_FOLDER="${CMAKE_SOURCE_DIR}/data")
+
 function(add_test_executable name)
     add_executable(${name} ${name}.cpp)
     target_link_libraries(${name} PRIVATE threepp Catch2::Catch2)
@@ -12,3 +14,4 @@ add_subdirectory(core)
 add_subdirectory(math)
 add_subdirectory(utils)
 add_subdirectory(renderers)
+add_subdirectory(loaders)
